dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  selector:
    app: test-app
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
